tweaked backgound css

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ src: url('../fonts/The_Black_Box-FFP.otf');
 }
 @import url('https://fonts.googleapis.com/css?family=Bitter');
 body {
+  height: 100%;
 background: url(../img/bg.jpg) no-repeat center center fixed;
 -webkit-background-size: cover;
 -moz-background-size: cover;
